@@ -11,6 +11,7 @@ Tim Berners-Lee
 Antoon Bosselaers
 Andrea Bottoni
 Andrew Eland
+Philippe Frycia
 Peter Gutmann
 Hirendra Hindocha
 Nikhil Jhingan
